<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/number_chooser_default_height"
    android:alpha="0.75">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageButtonDown"
        android:layout_width="@dimen/number_chooser_default_height"
        android:layout_height="match_parent"
        android:contentDescription="@string/minus_button_description"
        app:cornerRadius="8dp"
        app:icon="@drawable/minus_icon"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ems="3"
        android:gravity="center_horizontal"
        android:hint="@string/number_chooser_hint"
        android:inputType="number"
        android:text="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageButtonDown"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageButtonUp"
        android:layout_width="@dimen/number_chooser_default_height"
        android:layout_height="match_parent"
        android:contentDescription="@string/plus_button_description"
        app:cornerRadius="8dp"
        app:icon="@drawable/plus_icon"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/number"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>